--- a/final/package.json
+++ b/final/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
